# infotecs-intership

./: .clang-format  .gitignore  CMakeLists.txt  README.md
receiver/: CMakeLists.txt
receiver/src/: io.hpp  main.cpp  node.hpp
sender/: CMakeLists.txt
sender/src/: io.hpp  logging.hpp  main.cpp  node.hpp
sender/src/sync/: queue.hpp  thread_group.hpp
